care/force-app/main/default/objects/Opportunity_Service_Area__c/Opportunity_Service_Area__c.object-meta.xml
<CustomObject>
    <description>The collection of postal codes for one service area inside a contract composer opportunity</description>
    <label>Opportunity Service Area</label>
    <nameField>
        <label>Display Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Service Areas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>