care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/Active_Ads__c.field-meta.xml
<CustomField>
    <fullName>Active_Ads__c</fullName>
    <description>Active Ads after the contract has been approved</description>
    <label>Active Ads</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>