care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/Active_for_Match__c.field-meta.xml
<CustomField>
    <fullName>Active_for_Match__c</fullName>
    <label>Active for Match</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>