care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/Advertising_Spend__c.field-meta.xml
<CustomField>
    <fullName>Advertising_Spend__c</fullName>
    <defaultValue>300</defaultValue>
    <description>Amount being spent on advertising</description>
    <label>Advertising Spend</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>