care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/Age_Range__c.field-meta.xml
<CustomField>
    <fullName>Age_Range__c</fullName>
    <description>Age Range</description>
    <label>Age Range</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-1 (infant)</fullName>
            </value>
            <value>
                <fullName>1-2 (toddler)</fullName>
            </value>
            <value>
                <fullName>3-4 (preschool)</fullName>
            </value>
            <value>
                <fullName>5+ (school age)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>