care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/BGC_City__c.field-meta.xml
<CustomField>
    <fullName>BGC_City__c</fullName>
    <description>Background check contact city address</description>
    <label>BGC City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>