care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/BGC_First_Name__c.field-meta.xml
<CustomField>
    <fullName>BGC_First_Name__c</fullName>
    <description>Background check contact First Name</description>
    <label>BGC First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>