care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/BGC_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>BGC_Last_Name__c</fullName>
    <description>Background check contact Last Name</description>
    <label>BGC Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>