care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/BGC_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>BGC_Postal_Code__c</fullName>
    <description>Background check contact postal code address</description>
    <label>BGC Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>