care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/BGC_State__c.field-meta.xml
<CustomField>
    <fullName>BGC_State__c</fullName>
    <description>Background check contact state address</description>
    <label>BGC State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>