care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/BGC_Street__c.field-meta.xml
<CustomField>
    <fullName>BGC_Street__c</fullName>
    <description>Background check contact street address</description>
    <label>BGC Street</label>
    <type>TextArea</type>
</CustomField>