care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/Child_Care_Pre_School__c.field-meta.xml
<CustomField>
    <fullName>Child_Care_Pre_School__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child Care Pre-School</label>
    <type>Checkbox</type>
</CustomField>