care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/Child_Care_Pre_School_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Child_Care_Pre_School_Capacity__c</fullName>
    <label>Child Care Pre-School Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>