care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/Child_Care_Pre_Teens_Teens__c.field-meta.xml
<CustomField>
    <fullName>Child_Care_Pre_Teens_Teens__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child Care Pre-Teens/Teens</label>
    <type>Checkbox</type>
</CustomField>