care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/Child_Care_Pre_Teens_Teens_Starting_Rent__c.field-meta.xml
<CustomField>
    <fullName>Child_Care_Pre_Teens_Teens_Starting_Rent__c</fullName>
    <label>Child Care Pre-Teens/Teens Starting Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>