care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/Child_Care_School_Aged__c.field-meta.xml
<CustomField>
    <fullName>Child_Care_School_Aged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child Care School Aged</label>
    <type>Checkbox</type>
</CustomField>