care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Display City</description>
    <label>Display City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>