care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email address for the location, optional</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>