care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/Flat_Rate_Billing_Cadence__c.field-meta.xml
<CustomField>
    <fullName>Flat_Rate_Billing_Cadence__c</fullName>
    <description>Frequency of bills sent to provider, initially used for Flat Rate</description>
    <label>Flat Rate Billing Cadence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quarterly</fullName>
                <default>true</default>
                <label>Quarterly</label>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
                <isActive>false</isActive>
                <label>Monthly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>