care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/Flat_Rate_Billing_In_Months__c.field-meta.xml
<CustomField>
    <fullName>Flat_Rate_Billing_In_Months__c</fullName>
    <formula>IF(ISPICKVAL(Flat_Rate_Billing_Cadence__c, &apos;Annually&apos;), 12,
   IF(ISPICKVAL(Flat_Rate_Billing_Cadence__c, &apos;Quarterly&apos;), 3,
      IF(ISPICKVAL(Flat_Rate_Billing_Cadence__c, &apos;Monthly&apos;), 1, 1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flat Rate Billing In Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>