care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/Galore_Status__c.field-meta.xml
<CustomField>
    <fullName>Galore_Status__c</fullName>
    <label>Galore Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>