care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/Galore_uuid__c.field-meta.xml
<CustomField>
    <fullName>Galore_uuid__c</fullName>
    <label>Galore uuid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>