care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/Geolocation_Coordinates__c.field-meta.xml
<CustomField>
    <fullName>Geolocation_Coordinates__c</fullName>
    <description>Stores the geolocation of the Opportunity Service Area</description>
    <label>Geolocation Coordinates</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>