care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/Inactive_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Agreement_Date__c</fullName>
    <label>Inactive Agreement Date</label>
    <type>Date</type>
</CustomField>