care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/License_Details__c.field-meta.xml
<CustomField>
    <fullName>License_Details__c</fullName>
    <description>License Details from the API, usually a reason for rejection</description>
    <label>License Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>