care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/License_Number__c.field-meta.xml
<CustomField>
    <fullName>License_Number__c</fullName>
    <description>License Number</description>
    <label>License Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>