care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/Location_Account__c.field-meta.xml
<CustomField>
    <fullName>Location_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Service Areas</relationshipLabel>
    <relationshipName>Opportunity_Service_Areas</relationshipName>
    <type>Lookup</type>
</CustomField>