care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/Maximum_Age__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Age__c</fullName>
    <defaultValue>36</defaultValue>
    <description>Maximum Age</description>
    <label>Maximum Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>