care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/Minimum_Age__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Age__c</fullName>
    <defaultValue>12</defaultValue>
    <description>Minimum Age</description>
    <label>Minimum Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>