care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>Display Postal Code</description>
    <label>Display Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>