care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/Postal_Codes__c.field-meta.xml
<CustomField>
    <fullName>Postal_Codes__c</fullName>
    <description>CSV of postal codes selected for the service area</description>
    <label>Postal Codes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>