care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/Registered_Entity_City__c.field-meta.xml
<CustomField>
    <fullName>Registered_Entity_City__c</fullName>
    <description>Registered Entity City</description>
    <label>Registered Entity City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>