care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/Registered_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Registered_Entity_Name__c</fullName>
    <description>Registered Entity Name</description>
    <label>Registered Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>