care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/Registered_Entity_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Registered_Entity_Postal_Code__c</fullName>
    <description>Registered Entity Postal Code</description>
    <label>Registered Entity Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>