care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/Registered_Entity_State__c.field-meta.xml
<CustomField>
    <fullName>Registered_Entity_State__c</fullName>
    <description>Registered Entity State</description>
    <label>Registered Entity State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>