care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/Registered_Entity_Street__c.field-meta.xml
<CustomField>
    <fullName>Registered_Entity_Street__c</fullName>
    <description>Registered Entity Street</description>
    <label>Registered Entity Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>