care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/Senior_Care_Assisted_Living__c.field-meta.xml
<CustomField>
    <fullName>Senior_Care_Assisted_Living__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Senior Care Assisted Living</label>
    <type>Checkbox</type>
</CustomField>