care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/Senior_Care_Indep_Living_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Senior_Care_Indep_Living_Capacity__c</fullName>
    <label>Senior Care Independent Living Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>