care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/Senior_Care_Indep_Living_Starting_Rent__c.field-meta.xml
<CustomField>
    <fullName>Senior_Care_Indep_Living_Starting_Rent__c</fullName>
    <label>Senior Care Indep Living Starting Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>