care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/Senior_Care_Memory_Care__c.field-meta.xml
<CustomField>
    <fullName>Senior_Care_Memory_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Senior Care Memory Care</label>
    <type>Checkbox</type>
</CustomField>