care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/Senior_Care_Memory_Care_Starting_Rent__c.field-meta.xml
<CustomField>
    <fullName>Senior_Care_Memory_Care_Starting_Rent__c</fullName>
    <label>Senior Care Memory Care Starting Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>