care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Display Street</description>
    <label>Display Street</label>
    <type>TextArea</type>
</CustomField>