care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/Tuition_Discount_Exclusions__c.field-meta.xml
<CustomField>
    <fullName>Tuition_Discount_Exclusions__c</fullName>
    <description>Free text entry exclusions pertaining to the Tuition Discount for the location.</description>
    <label>Tuition Discount Exclusions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>