care/force-app/main/default/objects/Opportunity_Service_Area__c/fields/Tuition_Discount_Text__c.field-meta.xml
<CustomField>
    <fullName>Tuition_Discount_Text__c</fullName>
    <description>Tuition Discount Text for this location</description>
    <label>Tuition Discount Text</label>
    <length>100</length>
    <type>Text</type>
</CustomField>